--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,32 +36,6 @@
   transform: translateY(-50%) translateX(-50%);
 }
 
-.search__bar {
-  position: relative;
-  width: 100%;
-  height: 40px;
-  border: 1px solid #3f3f3f;
-  border-radius: 5px;
-  margin: 5px 0px 5px 0;
-}
-
-.search__input {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-
-.search__btn {
-  position: absolute;
-  right: 0;
-  width: 20%;
-  height: 100%;
-  border: none;
-  background-color: #FFB808;
-}
-
 .search__text {
   margin: 0;
   color: #FFF;
@@ -69,7 +43,7 @@
   letter-spacing: 1.5px;
 }
 
-.search__number {
+.search__text--strong {
   font-size: 1.3rem;
   color: #EE6054;
 }
@@ -80,4 +54,90 @@
   margin-left: auto;
   color: #0085CC !important;
   text-align: right;
+}
+
+/* feature */
+.feature {
+  background-color: #F2F6F7;
+}
+
+.feature__heading {
+  padding: 32px 0 40px 0;
+}
+
+.points {
+  margin-top: 16px;
+}
+
+.points__inner {
+  max-width: 920px;
+  margin-right: auto;
+  margin-left:auto;
+  display: flex;
+  justify-content: space-between; 
+}
+
+.point-panel {
+  background-color: #fff;
+  width: 230px;
+  position: relative;
+}
+
+.point-panel__num {
+  font-family:Ricty Diminished;
+  font-size: 100px;
+  position: absolute;
+  top: -80px;
+  left: 0;
+}
+
+.point-panel__img {
+  width: 80px;
+  height: 70px;
+  background-color: #efefef;
+  border: 1px solid #3f3f3f;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 24px;
+}
+
+.point-panel__heading {
+  font-size: 20px;
+}
+
+.point-panel__heading--strong {
+  color: #EE6054;
+  font-weight: bold;
+}
+
+.point-panel__inner {
+  max-width: 180px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  padding: 24px 0 16px 0;
+}
+
+.point-panel__text {
+  margin: 0;
+}
+
+.cta {
+  text-align: center;
+  padding: 32px;
+}
+
+.cta__login {
+  padding: 8px 32px 8px 32px;
+  color: #fff;
+  background-color: #FFB808;
+  border: none!important;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+  border-radius: 3px;
+}
+
+.cta__signup {
+  display: block;
+  padding: 8px;
+  border: none;
 }
