--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,148 +1,156 @@
 .mv {
-  width: 100%;
-  height: 550px;
-  background-image: url('../storage/top.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
+    width: 100%;
+    height: 550px;
+    background-image: url("../storage/top.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .mv__heading {
-  font-size: 40px;
-  font-weight: 500;
-  color: #FFF;
-  text-align: center;
-  margin: 0;
-  padding: 56px 0 20px 0;
+    font-size: 40px;
+    font-weight: 500;
+    color: #fff;
+    text-align: center;
+    margin: 0;
+    padding: 56px 0 20px 0;
 }
 
 .search {
-  width: 550px;
-  height: 220px;
-  background-color: rgba(0, 0, 0, 0.5);
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 50px;
-  position: relative;
+    width: 550px;
+    height: 220px;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 50px;
+    position: relative;
 }
 
 .search__inner {
-  width: 450px;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
+    width: 450px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
 }
 
 .search__text {
-  margin: 0;
-  color: #FFF;
-  font-size: 1rem;
-  letter-spacing: 1.5px;
+    margin: 0;
+    color: #fff;
+    font-size: 1rem;
+    letter-spacing: 1.5px;
 }
 
 .search__text--strong {
-  font-size: 1.3rem;
-  color: #EE6054;
+    font-size: 1.3rem;
+    color: #ee6054;
 }
 
 .search__link {
-  margin: 0;
-  display: inline-block;
-  margin-left: auto;
-  color: #0085CC !important;
-  text-align: right;
+    margin: 0;
+    display: inline-block;
+    margin-left: auto;
+    color: #0085cc !important;
+    text-align: right;
 }
 
 /* feature */
 .feature {
-  background-color: #F2F6F7;
+    background-color: #f2f6f7;
 }
 
 .feature__heading {
-  padding: 32px 0 40px 0;
+    padding: 32px 0 40px 0;
 }
 
 .points {
-  margin-top: 16px;
+    margin-top: 16px;
 }
 
 .points__inner {
-  max-width: 920px;
-  margin-right: auto;
-  margin-left:auto;
-  display: flex;
-  justify-content: space-between; 
+    max-width: 920px;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    justify-content: space-between;
 }
 
 .point-panel {
-  background-color: #fff;
-  width: 230px;
-  position: relative;
+    background-color: #fff;
+    width: 230px;
+    position: relative;
 }
 
 .point-panel__num {
-  font-family:Ricty Diminished;
-  font-size: 100px;
-  position: absolute;
-  top: -80px;
-  left: 0;
-  color: #3f3f3f;
+    font-family: Ricty Diminished;
+    font-size: 100px;
+    position: absolute;
+    top: -80px;
+    left: 0;
+    color: #3f3f3f;
 }
 
 .point-panel__img {
-  width: 80px;
-  height: 70px;
-  background-color: #efefef;
-  border: 1px solid #3f3f3f;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 24px;
+    width: 80px;
+    height: 70px;
+    background-color: #efefef;
+    border: 1px solid #3f3f3f;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 24px;
 }
 
 .point-panel__heading {
-  font-size: 20px;
+    font-size: 20px;
 }
 
 .point-panel__heading--strong {
-  color: #EE6054;
-  font-weight: bold;
+    color: #ee6054;
+    font-weight: bold;
 }
 
 .point-panel__inner {
-  max-width: 180px;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
-  padding: 24px 0 16px 0;
+    max-width: 180px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    padding: 24px 0 16px 0;
 }
 
 .point-panel__text {
-  margin: 0;
+    margin: 0;
 }
 
 .cta {
-  text-align: center;
-  padding: 32px;
+    text-align: center;
+    padding: 32px;
 }
 
 .cta__login {
-  padding: 8px 32px 8px 32px;
-  color: #fff;
-  background-color: #FFB808;
-  border: none!important;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
-  border-radius: 3px;
+    padding: 8px 32px 8px 32px;
+    color: #fff;
+    background-color: #ffb808;
+    border: none !important;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+        0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    border-radius: 3px;
 }
 
 .cta__signup {
-  display: block;
-  padding: 8px;
-  border: none;
+    display: block;
+    padding: 8px;
+    border: none;
 }
 
 .new-arrival__heading {
-  padding: 32px 0 40px 0;
+    padding: 32px 0 40px 0;
 }
+.pagination {
+    user-select: none;
+}
+.pagination li {
+    line-height: 34px!important;
+}
+
