--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-
 .mv {
     width: 100%;
     height: 550px;
@@ -127,6 +126,10 @@
 .cta {
     text-align: center;
     padding: 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .cta__login {
@@ -137,6 +140,11 @@
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
         0 2px 10px 0 rgba(0, 0, 0, 0.12);
     border-radius: 3px;
+}
+
+.cta__login:hover {
+    text-decoration: none;
+    color: #fff;
 }
 
 .cta__signup {
